# ai-commit

./: .gitignore  LICENSE  README.md  aicommit-.md  next-stpes.md  plano-publicacao.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ai_commit/: __init__.py  cli.py  config.py  errors.py  git_utils.py  messages.py  preview.py  prompts.py  status.py
src/ai_commit/providers/: __init__.py  codex.py  opencode.py
tests/: test_cli.py  test_config.py  test_git_utils.py  test_messages.py  test_preview.py  test_status.py
