[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-commit-cli-tool"
version = "0.1.2"
description = "Generate clean git commit messages from staged changes using Codex or OpenCode."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "ai-commit contributors" }
]
keywords = ["git", "commit", "ai", "codex", "opencode", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/matheusz-nied/ai-commit"
Issues = "https://github.com/matheusz-nied/ai-commit/issues"

[project.scripts]
ai-commit = "ai_commit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
